Target jre 1.8 and jdk 1.8